Frontend course progress

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -103,3 +103,18 @@ bSkipMovies=False
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
+[/Script/MeleeCombatProject.FrontendDeveloperSettings]
+FrontendWidgetMap=(((TagName="FrontEnd.Widget.PressAnyKeyScreen"), "/Game/UI/WidgetBlueprints/MenuWidgets/WBP_PressAnyKey.WBP_PressAnyKey_C"),((TagName="FrontEnd.Widget.MainMenuScreen"), "/Game/UI/WidgetBlueprints/MenuWidgets/WBP_MainMenu.WBP_MainMenu_C"))
+
+[/Script/CommonInput.CommonInputSettings]
+InputData=/Game/UI/CommonInputData/InputData_Default.InputData_Default_C
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Windows
+bCanChangeGamepadType=True
++ControllerData=/Game/UI/CommonInputData/ControllerData_MouseKeyboard.ControllerData_MouseKeyboard_C
+
